--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "hls.js": "^1.6.1",
+    "jsmpeg": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -21,6 +23,7 @@
     "recharts": "^2.13.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "video.js": "^8.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
