--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "hls.js": "^1.6.1",
     "jsmpeg": "^1.0.0",
+    "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -20,7 +21,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "react-toggle": "^4.1.3",
-    "recharts": "^2.13.3",
+    "recharts": "^2.15.2",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "video.js": "^8.22.0",
